tests/baselines/reference/asyncGenerators.objectLiteralMethod.18.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.18.es5.ts(3,16): error TS2304: Cannot find name 'yield'.


==== tests/cases/conformance/asyncGenerators/es5/objectLiteralMethods/asyncGenerators.objectLiteralMethod.18.es5.ts (1 errors) ====
    const x = {
        async * f() {
            var x: yield;
                   ~~~~~
!!! error TS2304: Cannot find name 'yield'.
        }
    }